# knowledge-curation

./: .env.development.example  .env.example  .gitignore  CONTAINER_MANAGEMENT.md  DEMO_DATA.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  SECURITY.md  VECTOR_TEST_REPORT.md  advanced-search.html  comprehensive_vector_test.py  docker-compose.yml  env.development  env.development.example  manual_vector_test.py  manual_vector_test_results.json  repository.toml  towncrier.toml  vector_test_results.json
backend/: .dockerignore  .mrbob.ini  CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  EXPORT_SYSTEM_SUMMARY.md  LICENSE.md  Makefile  PROGRESS_UPDATE_IMPLEMENTATION.md  README.md  instance.yaml  pyproject.toml  test_export_system.py  test_progress_update.py
backend/scripts/: create_site.py  debug_types_endpoint.py  initialize_vector_db.py  rebuild_vectors.py  reinstall_addon.py  test_auto_vectorization.py  test_vectorization.py
backend/src/knowledge/curator/: CHANGES.rst  CONTRIBUTORS.rst  LEARNING_GOAL_SUPPORT_IMPLEMENTATION.md  README.rst  __init__.py  configure.zcml  demo_quality_assessment.py  interfaces.py  permissions.zcml  profiles.zcml  pyproject.toml  setuphandlers.py  test_learning_goal_support.py  testing.py  workflow_events.py  workflow_scripts.py
backend/src/knowledge/curator/api/: __init__.py  analytics.py  bulk_operations.py  configure.zcml  enhancement_queue.py  import_export.py  knowledge_container.py  knowledge_graph.py  learning_progression.py  search.py  spaced_repetition.py  vector_api.py
backend/src/knowledge/curator/api/docs/: api_documentation.md  api_endpoints_summary.md  openapi.yaml
backend/src/knowledge/curator/api/serializers/: __init__.py  knowledge.py
backend/src/knowledge/curator/behaviors/: __init__.py  ai_enhanced.py  configure.zcml  interfaces.py  knowledge_graph.py  spaced_repetition.py
backend/src/knowledge/curator/browser/: __init__.py  configure.zcml  views.py
backend/src/knowledge/curator/browser/static/: knowledge.css
backend/src/knowledge/curator/browser/templates/: knowledge_curator_view.pt  knowledge_home_view.pt
backend/src/knowledge/curator/browser/views/: __init__.py  bookmark_plus.py  configure.zcml  enhancement_queue.py  knowledge_graph.py  learning_goal.py  project_log.py  quality_dashboard.py  research_note.py  review_interface.py  vector_management.py  workflow_views.py
backend/src/knowledge/curator/config/: enhancement_priority.py
backend/src/knowledge/curator/content/: __init__.py  bookmark_plus.py  bookmark_plus.zcml  configure.zcml  events.py  field_validators.py  knowledge_container.py  knowledge_container.zcml  knowledge_item.py  knowledge_item.zcml  learning_goal.py  learning_goal.zcml  project_log.py  project_log.zcml  research_note.py  research_note.zcml  research_note_events.py  validators.md  validators.py
backend/src/knowledge/curator/controlpanel/: configure.zcml
backend/src/knowledge/curator/docs/: enhancement_priority.md  knowledge_containers_user_guide.md  knowledge_graph.md  quality_assessment_system.md  spaced_repetition.md
backend/src/knowledge/curator/graph/: __init__.py  algorithms.py  configure.zcml  interfaces.py  model.py  operations.py  relationships.py  storage.py  traversal.py  validators.py
backend/src/knowledge/curator/graph/visualization/: __init__.py
backend/src/knowledge/curator/indexers/: configure.zcml
backend/src/knowledge/curator/locales/: knowledge.curator.pot
backend/src/knowledge/curator/portlets/: configure.zcml
backend/src/knowledge/curator/profiles/default/: browserlayer.xml  metadata.xml  types.xml  workflows.xml
backend/src/knowledge/curator/profiles/uninstall/: browserlayer.xml
backend/src/knowledge/curator/repetition/: __init__.py  algorithm.py  configure.zcml  forgetting_curve.py  scheduler.py  tracker.py  utilities.py
backend/src/knowledge/curator/scripts/: __init__.py  complete_demo_data.py  corrected_research_notes.py  create_demo_data.py  create_demo_data_runtime.py  final_demo_data.py  fixed_demo_data.py  get_ki_uids.py  minimal_research_notes.py  simple_research_notes.py  vector_cli.py  working_research_notes.py
backend/src/knowledge/curator/serializers/: configure.zcml  spaced_repetition.py
backend/src/knowledge/curator/setuphandlers/: __init__.py  initial.py
backend/src/knowledge/curator/sharing/: __init__.py  sovereignty_sharing.py
backend/src/knowledge/curator/tasks/: enhancement_scheduler.py
backend/src/knowledge/curator/tests/: __init__.py  test_bookmark_plus.py  test_bookmark_status_tracking.py  test_graph.py  test_knowledge_container.py  test_knowledge_container_comprehensive.py  test_knowledge_container_implementation.py  test_knowledge_item_coordination.py  test_knowledge_item_validators.py  test_knowledge_workflows_integration.py  test_learning_goal.py  test_performance_validation.py  test_project_log.py  test_quality_assessment.py  test_research_note.py  test_setup.py  test_spaced_repetition.py  test_spaced_repetition_integration.py  test_vector_operations.py  test_workflows.py
backend/src/knowledge/curator/tests/test_api/: __init__.py  test_bulk_operations.py  test_knowledge_graph.py  (+1 more)
backend/src/knowledge/curator/upgrades/: EXAMPLE_LEARNING_GOAL_PREREQUISITES_MIGRATION.py  README_assessment.md  README_v3_migration.md  USAGE_EXAMPLES.md  add_spaced_repetition.py  assess_current_state.py  bookmark_status_upgrade.py  configure.zcml  migrate_relationships.py  run_assessment.py  test_assessment.py  test_v3_migration.py  to_v3.py  v2.py
backend/src/knowledge/curator/utilities/: quality_assessment.py
backend/src/knowledge/curator/validation/: __init__.py  container_validation.py
backend/src/knowledge/curator/vector/: README.md  __init__.py  adapter.py  config.py  configure.zcml  embeddings.py  events.py  management.py  search.py
backend/src/knowledge/curator/viewlets/: configure.zcml
backend/src/knowledge/curator/vocabularies/: __init__.py  configure.zcml  connection_types.py  knowledge_items.py
backend/tests/: conftest.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
(+65 files in other folders)
