[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge.curator"
version = "1.0.0.dev0"
description = "Personal Knowledge Curation System for Plone"
readme = "README.rst"
license = "GPL-2.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["Python", "Plone", "CMS", "Knowledge", "Management", "AI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: Addon",
    "Framework :: Plone :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "setuptools",
    "z3c.jbot",
    "plone.api>=1.8.4",
    "plone.app.dexterity",
    "plone.app.referenceablebehavior",
    "plone.app.relationfield",
    "plone.app.lockingbehavior",
    "plone.schema",
    "plone.volto",
    "sentence-transformers",
    "qdrant-client",
    "redis",
    "celery",
]

[project.optional-dependencies]
test = [
    "plone.app.testing",
    "plone.testing>=5.0.0",
    "plone.app.contenttypes",
    "plone.app.robotframework[debug]",
    "collective.MockMailHost",
]

[project.urls]
PyPI = "https://pypi.python.org/pypi/knowledge.curator"
Source = "https://github.com/collective/knowledge.curator"
Tracker = "https://github.com/collective/knowledge.curator/issues"

[project.entry-points]
"z3c.autoinclude.plugin" = {target = "plone"}

[tool.setuptools.packages.find]
include = ["knowledge*"]
exclude = ["ez_setup"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.rst", "*.zcml", "*.xml", "*.pt", "*.po", "*.pot", "*.png", "*.gif", "*.jpg", "*.jpeg", "*.js", "*.css"] 